Suppress scrollbars. Fixes #19.

--- a/src/public/editor.less
+++ b/src/public/editor.less
@@ -77,6 +77,7 @@ main {
   box-sizing: border-box;
   flex: 1;
   position: relative;
+  overflow: hidden;
 
   canvas {
     position: absolute;
